# pangu

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Recorder.sln
Recorder/: Recorder.vcxproj  Recorder.vcxproj.filters  export.cpp  muxer_file.h  record_audio_dshow.h  record_desktop_define.h  record_desktop_factory.cpp  record_desktop_mag.cpp  record_desktop_mag.h  record_desktop_wgc.cpp  record_desktop_wgc.h  system_version.cpp  system_version.h
Test/: Test.vcxproj
WGC/: WGC.vcxproj  WGC.vcxproj.filters  export.h  framework.h  pch.h  wgc_session_impl.cpp  wgc_session_impl.h
ci/: build-windows.bat
cmake/: darwin.toolchain.cmake  ios.toolchain.cmake  msvc.toolchain.cmake  utils.cmake  version.rc.in
debugger/: CMakeLists.txt
debugger/src/: main.cc
src/: CMakeLists.txt
src/common/: version.h
src/engine/: pg_engine_impl.cc  pg_engine_impl.h
src/include/pangu/: pg_base.h  pg_engine_i.h  pg_platform.h  pg_refptr.h
src/modules/: logger.cc  logger.h
